tests/baselines/reference/parserErrorRecovery_SwitchStatement2.errors.txt
==== tests/cases/conformance/parser/ecmascript5/ErrorRecovery/SwitchStatements/parserErrorRecovery_SwitchStatement2.ts (2 errors) ====
    class C {
      constructor() {
        switch (e) {
                ~
!!! error TS2304: Cannot find name 'e'.
    
    class D {
    ~~~~~
!!! error TS1130: 'case' or 'default' expected.
    }